@startuml

title __INTERFACEADAPTERS's Class Diagram__\n

  namespace FourCats {
    namespace InterfaceAdapters {
      class FourCats.InterfaceAdapters.Controller {
          + Controller()
          + declineSuggestion()
          + generateBAL()
          + generateSuggestions()
      }
    }
  }
  

  namespace FourCats {
    namespace InterfaceAdapters {
      class FourCats.InterfaceAdapters.DataPresenter {
          - toShow : String
          + getDataToShow()
          + showDeclinedSuggestion()
          + showGenerationStatus()
          + showSuggestionsForScenario()
      }
    }
  }
  

  FourCats.InterfaceAdapters.Controller o-- FourCats.Port.DeclineBALSuggestionInputPort : declineSuggestion
  FourCats.InterfaceAdapters.Controller o-- FourCats.UseCaseInteractor.GenerateBAL : generateBAL
  FourCats.InterfaceAdapters.Controller o-- FourCats.Port.GenerateBALSuggestionsInputPort : generateSuggestion
  FourCats.InterfaceAdapters.DataPresenter .up.|> FourCats.Port.DeclineBALSuggestionOutputPort
  FourCats.InterfaceAdapters.DataPresenter .up.|> FourCats.Port.GenerateBALOutputPort
  FourCats.InterfaceAdapters.DataPresenter .up.|> FourCats.Port.GenerateBALSuggestionsOutputPort
  FourCats.InterfaceAdapters.DataPresenter -up-|> FourCats.DataStructure.Observer.Subject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
